JDK 1.6 build issues / endosing JAXB 2.2.* API and impl
svn path=/trunk/; revision=363